# raytracer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  raytracer.sln
graphics/: Pnt3.cpp  Vec3.cpp  geometry.cpp  geometry.h  geometry.ixx  graphics.vcxproj  graphics.vcxproj.filters  image.cpp  image.h  light.h  object.cpp  object.h  shape.cpp  shape.h  transform.cpp  transform.h  transform.ixx  view.cpp  view.h
include/: geometry.h  image.h  light.h  lodepng.h  object.h  scene.h  transform.h  utils.h  view.h
src/: geometry.cpp  image.cpp  light.cpp  lodepng.cpp  main.cpp  object.cpp  scene.cpp  transform.cpp  utils.cpp  view.cpp
test/: main.cpp  test.vcxproj
